package com.example.colordemon.GameStruct.Stuffs;

public interface Consumable {
    void use();
}
