package com.example.colordemon.GameStruct.Stuffs;

import com.example.colordemon.GameStruct.GameObjectType;

public class Door extends Stuff implements Openable{
    public Door(float x, float y) {
        super(x, y);
    }

    @Override
    public void open() {

    }
}
