package com.example.colordemon.GameStruct.Stuffs;

public interface Openable {
    void open();
}
