package com.example.colordemon.GameStruct.Stuffs;

import com.example.colordemon.GameStruct.GameObjectType;

public class Potion extends Stuff implements Consumable{
    public Potion(float x, float y) {
        super(x, y);
    }

    @Override
    public void use() {

    }
}
