package com.example.colordemon.GameStruct.Stuffs;

import com.example.colordemon.GameStruct.GameObject;
import com.example.colordemon.GameStruct.GameObjectType;

public class Stuff extends GameObject {

    public Stuff(float x, float y) {
        super(x, y);
    }
    @Override
    public void update() {

    }
}
